demo/src/main/java/com/example/demo/web/error/ApiError.java
package com.example.demo.web.error;

public class ApiError {
}
